# muscadet

./: CMakeLists.txt  run.sh
include/systems/: Camera.hpp
res/shaders/: fragment.glsl  fragmentSimple.glsl  vertex.glsl  vertexSimple.glsl
src/: main.cpp
src/components/: Meshes.hpp  Transforms.hpp
src/core/: main.cpp
src/engines/: RenderingEngine.hpp
src/systems/: Camera.cpp  Camera.hpp  Scene.hpp  Shaders.cpp  Shaders.hpp  TransformSystem.hpp
src/systems/EntityComponentSystem/: ComponentArray.cpp  ComponentArray.hpp  ComponentManager.cpp  ComponentManager.hpp  ECS.cpp  ECS.hpp  EntityManager.cpp  EntityManager.hpp  System.hpp  SystemManager.cpp  SystemManager.hpp
src/utilities/: Debug.cpp  Debug.hpp  Loader.cpp  Loader.hpp  loadShaderFromFile.cpp
